<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.dawarly.activities.about.AboutViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/welcome_to_dawarly"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtWelcome"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dawarly_helps_you_to_get_your_location_precisely_so_please_set_your_gps_n_your_location_will_be_determined_by_a_red_marker_on_the_map"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtAbout"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAbout"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/how_to_show_the_places_nearby_me"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtView"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dawarly_helps_you_to_get_the_places_nearby_your_location_as_you_choose_from_categories_njust_open_the_map_screen_press_on_categories_menu_to_choose_the_place_category_nthen_choose_the_place_category_that_you_need_doctors_airports_hospitals_etc_nthen_enter_the_radius_of_search_region_in_kms_n_then_press_on_search_button_and_please_wait_for_nseveral_seconds_until_finish_the_search"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/txtView2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/txtView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtView2"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/information_about_place_and_drawing_path_nbetween_places_and_your_location"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtView3"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/when_you_press_on_any_red_mark_some_information_will_be_shown_press_on_it_to_show_an_alert_dialog_nthe_alert_dialog_lets_you_choose_from_two_buttons_n1_draw_path_between_you_and_this_place_n2_show_all_information_about_this_place"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtView4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/txtView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtView4"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/copyrighted"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtView5"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/created_by_ahmed_hashem_and_khaled_saleh_senior_android_developers_n_e_mail_medohashem490_gmail_com"
            android:textColor="@android:color/black" />

    </RelativeLayout>
</layout>