<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner_bg_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/placeDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bg_gredient_blue_light_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/placedetails"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/drawPath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bg_gredient_blue_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/drawpath"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</layout>